--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -43,6 +43,9 @@
 // Body
 @import './body';
 
+// Login
+@import './login';
+
 // Buttons
 @import './variables/btn';
 @import 'client/variables/btn'; // client over-rides
