--- a/app/assets/stylesheets/tenon/input.scss
+++ b/app/assets/stylesheets/tenon/input.scss
@@ -92,9 +92,15 @@
   height: 100%;
   cursor: pointer;
 
+  &:hover + .input-block__check-box-icon {
+    border-color: $primary-color;
+  }
   &:checked + .input-block__check-box-icon {
-    background-color: $grey;
-    color: $primary-color;
+    border-color: $primary-color;
+    background-color: $primary-color;
+    i {
+      opacity: 1;
+    }
   }
 }
 
@@ -102,14 +108,24 @@
   @include default-transition;
   display: block;
   position: absolute;
-  top: 0;
+  top: ($body-line-height - 20px) / 2;
   left: 0;
   border: 2px solid $grey;
   border-radius: 2px;
-  width: 18px;
-  height: 18px;
+  width: 20px;
+  height: 20px;
   color: transparent;
   content: 0;
+
+  i {
+    display: block;
+    opacity: 0;
+    margin: -2px 0 0 -2px;
+    height: 20px;
+    line-height: 20px;
+    color: $white;
+    font-size: 20px;
+  }
 }
 
 
