--- a/app/assets/stylesheets/tenon/input.scss
+++ b/app/assets/stylesheets/tenon/input.scss
@@ -80,7 +80,14 @@
   line-height: $body-line-height;
 }
 
-.input-block__check-box {
+.input-block__explanation {
+  @extend %font-smallest;
+  padding-top: $default-spacing / 4;
+  color: $explanation-color;
+}
+
+// check-box and radio-button
+%check-box-and-radio-button {
   position: absolute;
   top: 0;
   right: 0;
@@ -88,30 +95,32 @@
   left: 0;
   opacity: 0;
   z-index: 10;
+  border-radius: 0;
   width: 100%;
   height: 100%;
   cursor: pointer;
 
-  &:hover + .input-block__check-box-icon {
+  &:hover + .input-block__checked-icon {
     border-color: $primary-color;
   }
-  &:checked + .input-block__check-box-icon {
+
+  &:checked + .input-block__checked-icon {
     border-color: $primary-color;
     background-color: $primary-color;
+
     i {
       opacity: 1;
     }
   }
 }
 
-.input-block__check-box-icon {
+%check-box-and-radio-button-icon {
   @include default-transition;
   display: block;
   position: absolute;
   top: ($body-line-height - 20px) / 2;
   left: 0;
   border: 2px solid $grey;
-  border-radius: 2px;
   width: 20px;
   height: 20px;
   color: transparent;
@@ -128,12 +137,20 @@
   }
 }
 
-
-.input-block__radio-button {
+.input-block__check-box {
+  @extend %check-box-and-radio-button;
 }
 
-.input-block__explanation {
-  @extend %font-smallest;
-  padding-top: $default-spacing / 4;
-  color: $explanation-color;
+.input-block__check-box-icon {
+  @extend %check-box-and-radio-button-icon;
+  border-radius: 2px;
+}
+
+.input-block__radio-button {
+  @extend %check-box-and-radio-button;
+}
+
+.input-block__radio-button-icon {
+  @extend %check-box-and-radio-button-icon;
+  border-radius: 50%;
 }
