--- a/app/assets/stylesheets/tenon/hr.scss
+++ b/app/assets/stylesheets/tenon/hr.scss
@@ -1,9 +1,17 @@
 // Horizontal Rule
 hr {
   clear: both;
-  width: 100%;
-  height: 1px;
-  margin-bottom: $default-spacing/2;
+  margin: 0 0 $default-spacing/2;
   border: 0;
-  background-color: $hr-bg-color;
+  border-bottom: 1px solid $hr-bg-color;
+  width: 100%;
+  height: 0;
+
+  &.hr--dashed {
+    border-bottom-style: dashed;
+  }
+
+  &.hr--dotted {
+    border-bottom-style: dotted;
+  }
 }
