--- a/app/views/tenon/fields/_check_box.html.haml
+++ b/app/views/tenon/fields/_check_box.html.haml
@@ -1,2 +1,9 @@
-= render layout: 'tenon/fields/base', locals: { f: f, method_name: method_name, opts: opts } do
-  = f.super_check_box method_name, opts.merge(class: 'input-block__check-box')
+.input-block
+  = render layout: 'tenon/fields/base_inline', locals: { f: f, method_name: method_name, opts: opts } do
+    = f.super_check_box method_name, opts.merge(class: 'input-block__check-box')
+
+    .input-block__check-box-icon.input-block__checked-icon
+      = i('check')
+      
+  - if opts[:explanation].present?
+    .input-block__explanation= raw opts[:explanation]
