--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -56,8 +56,8 @@
 @import './actions';
 
 // Forms
-@import './input'; // bem: todo
-@import './form'; // bem: todo
+@import './input';
+@import './form';
 
 // Util nav
 @import './main-nav-toggle';
