--- a/app/views/tenon/styleguides/typography/_inline.html.haml
+++ b/app/views/tenon/styleguides/typography/_inline.html.haml
@@ -2,7 +2,7 @@
   %a.scroll-target{name: 'typography__inline'}
   %h3.color-black Inline
 
-  .panel--block
+  .panel.panel--block
     - ['em', 'strong', 'a href="#"'].each do |i|
       %p= "The <#{i}>quick brown fox</#{i}> jumps over the <#{i}>lazy dog.</#{i}>".html_safe
       %code= "The <#{i}>quick brown fox</#{i}> jumps over the <#{i}>lazy dog.</#{i}>"
