--- a/app/views/tenon/styleguides/_icons.html.haml
+++ b/app/views/tenon/styleguides/_icons.html.haml
@@ -8,7 +8,7 @@
     %br/
     %em.font-smaller Note: Icon names with more than one word must be connected with an underscore.
 
-  .panel--block
+  .panel.panel--block
     - ['volume_up', 'volume_down', 'volume_mute', 'volume_off'].each do |icon|
       %p
         = i(icon)
