--- a/app/views/tenon/styleguides/typography/_styles.html.haml
+++ b/app/views/tenon/styleguides/typography/_styles.html.haml
@@ -1,24 +1,14 @@
 %section
   %a.scroll-target{name: 'typography__styles'}
   %h3.color-black Style class helpers
-  %p Class helpers that can also @extend it in a Sass file.
+  %p Silent class helpers that you can @extend in a Sass file.
 
-  .panel--block
+  .panel.panel--block
     - [3, 4, 7].each do |s|
       %p{class: "font-n#{s}"} The quick brown fox jumps over the lazy dog.
-      %code.expandable
-        = expandable_toggle
-        %p= "<p class: 'font-n#{s}'>The quick brown fox jumps over the lazy dog.</p>"
-        %br/
-        %p
-          %span.color-primary Sass @extend:
-          = "@extend .font-n#{s};"
+      %code
+        = "@extend %font-n#{s};"
 
       %p{class: "font-i#{s}"} The quick brown fox jumps over the lazy dog.
-      %code.expandable
-        = expandable_toggle
-        %p= "<p class: 'font-i#{s}'>The quick brown fox jumps over the lazy dog.</p>"
-        %br/
-        %p
-          %span.color-primary Sass @extend:
-          = "@extend .font-i#{s};"
+      %code
+        = "@extend %font-i#{s};"
