Add flash--static class for inline flashes

--- a/app/assets/stylesheets/tenon/modules/flash.scss
+++ b/app/assets/stylesheets/tenon/modules/flash.scss
@@ -10,6 +10,13 @@
   color: $warning-fg-color;
 }
 
+.flash--static {
+  position: static;
+  top: auto;
+  z-index: auto;
+  margin-bottom: $default-spacing;
+}
+
 .flash--warning {
   background: $warning-bg-color;
   color: $warning-fg-color;
