--- a/app/assets/stylesheets/tenon/variables/colors-named.scss
+++ b/app/assets/stylesheets/tenon/variables/colors-named.scss
@@ -33,6 +33,8 @@ $panel-bg-color: $white;
 $contrast-bg-color: $grey;
 $light-border-color: lighten($grey, 10%);
 $hr-bg-color: lighten($grey, 20%);
+$modal-bg-color: $white;
+
 
 // Dropdown
 $dropdown-fg-color: darken($grey, 20%);
