--- a/app/assets/stylesheets/tenon/variables/z-index.scss
+++ b/app/assets/stylesheets/tenon/variables/z-index.scss
@@ -14,3 +14,5 @@ $z-filters-active: 60;
 $z-quick-search-active: 50;
 $z-quick-search-input: 10;
 $z-quick-search-actions: 20;
+$z-modal-overlay: 100;
+$z-modal: 101;
