--- a/app/views/tenon/item_assets/new.html.haml
+++ b/app/views/tenon/item_assets/new.html.haml
@@ -1,24 +1,29 @@
-.modal-tab-pane.tab-content
-  - unless params[:hide_upload]
-    #upload-asset
-      %h5 From Your Computer
-      #progress
-      = form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
-        = error_messages_for :asset
-        .fields.full
-          .form-group
-            .browse-button-holder.solo
-              .fileupload.btn.btn-secondary.browse
-                %span#choose-files Browse
-                %input{ type: 'file', class: 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
-        .spacer
+.modal.modal--fixed-footer
+  .modal__content
+    %h2 Choose Asset
+    - unless params[:hide_upload]
+      #upload-asset
+        %h3 From Your Computer
+        #progress
+        = form_for Tenon::Asset.new, format: 'json', builder: Tenon::FormBuilder do |f|
+          = error_messages_for :asset
+          .fields.full
+            .form-group
+              .browse-button-holder.solo
+                .fileupload.btn.btn-secondary.browse
+                  %span#choose-files Browse
+                  %input{ type: 'file', class: 'upload', multiple: defined?(multiple) && multiple, style: 'width: 100%;', name: 'asset[attachment]' }
+          .spacer
 
-  #pick-asset
-    %h5 From the Asset Library
+    #pick-asset
+      %h3 From the Asset Library
 
-    .filter= text_field_tag :q, '', id: 'quick-search', class: 'filter search', placeholder: 'Filter Assets', data: { 'record-list' => '.asset-list' }
+      .filter= text_field_tag :q, '', id: 'quick-search', class: 'filter search', placeholder: 'Filter Assets', data: { 'record-list' => '.asset-list' }
 
-    .asset-list-scroller
-      %ul#modal-asset-list.asset-list.record-grid.infinite-scroll{ data: { records: { url: assets_path(format: 'json'), template: 'tenon/templates/assets/asset_row', name: 'asset' } } }
+      .asset-list-scroller
+        %ul#modal-asset-list.asset-list.record-grid.infinite-scroll{ data: { records: { url: assets_path(format: 'json'), template: 'tenon/templates/assets/asset_row', name: 'asset' } } }
 
-      = link_to 'Load More Assets', '#', class: 'infinite-loader', 'data-record-list' => '#modal-asset-list'
+        = link_to 'Load More Assets', '#', class: 'infinite-loader', 'data-record-list' => '#modal-asset-list'
+
+  .modal__footer
+    %a.modal__action{ href: '#!', data: { modal_close: true } } Cancel
