Modals work again, asset attachment works, tenon content library works

--- a/app/assets/stylesheets/tenon/modules/asset-field.scss
+++ b/app/assets/stylesheets/tenon/modules/asset-field.scss
@@ -25,11 +25,14 @@
 }
 
 .asset-field__title {
+  @extend %truncate;
   float: left;
+  width: calc(100% - 190px);
 }
 
 .asset-field__actions {
   float: right;
+  width: 190px;
   text-align: right;
 }
 
