--- a/app/assets/stylesheets/tenon/modules/btn.scss
+++ b/app/assets/stylesheets/tenon/modules/btn.scss
@@ -7,6 +7,7 @@
   border: 0;
   border-radius: $default-border-radius;
   background-color: $btn-primary-bg-color;
+  cursor: pointer;
   padding: 0 $default-spacing;
   height: $btn-height;
   text-align: center;
