--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -69,11 +69,12 @@
 @import './modules/modal';
 @import './modules/modal-overlay';
 @import './modules/panel';
+@import './modules/progress';
 @import './modules/record';
 @import './modules/search-content';
 @import './modules/tn-content';  // bem: todo
 @import './modules/tn-embed-code';  // bem: todo
-@import './modules/tn-library';  // bem: todo
+@import './modules/tn-tc-library';  // bem: todo
 @import './modules/toolbar';
 @import './modules/util-nav';
 
