--- a/app/views/tenon/tenon_content/_fields.html.haml
+++ b/app/views/tenon/tenon_content/_fields.html.haml
@@ -15,7 +15,7 @@
     /   = i('visibility')
     /   %span Edit in Preview Mode
 
-    = link_to '#', class: 'tn-tc-add-content btn initial-row', data: { modal_target: ".tenon-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' }, title: 'Add Content' do
+    = link_to '#', class: 'tn-tc-add-content btn initial-row', data: { modal_target: ".tn-tc-library", modal_closest: '.tn-tc', modal_clone: 'true', modal_title: 'Add Content', modal_handler: 'Tenon.features.tenonContent.Library' }, title: 'Add Content' do
       Add Content
 
   .tn-tc-wrap
@@ -30,9 +30,9 @@
         - if row.object
           = render "tenon/tenon_content/row", f: row, row_partial: row.object.decorate.form_partial, field: field, title: row.object.row_type.titleize
 
-    .tenon-library-holder
-      .tenon-library
-        %ul
+    %div{style: 'display: none'}
+      .tn-tc-library
+        %ul.tn-tc-library__list
           - Tenon::TenonContent::RowTypes::LIBRARY_ROW_TYPES.each do |title, row_type|
-            %li= row_link(title, row_type, field, f)
+            %li.tn-tc-library__item= row_link(title, row_type, field, f)
         .spacer
