Some record list cleanup

--- a/app/assets/stylesheets/tenon/tenon.scss
+++ b/app/assets/stylesheets/tenon/tenon.scss
@@ -57,6 +57,7 @@
 @import './modules/drawer-pusher';
 @import './modules/dropdown';
 @import './modules/fab';
+@import './modules/fade';
 @import './modules/filter-drawer';
 @import './modules/flash';
 @import './modules/hr';
