--- a/app/assets/stylesheets/tenon/variables/base-colors.scss
+++ b/app/assets/stylesheets/tenon/variables/base-colors.scss
@@ -1,7 +1,9 @@
 // Named colors
 $black: #555;
+$true-black: #000;
 $white: #fff;
 $grey: #ababab;
+$cobalt: #2d3b41;
 $primary-color: #800080;
 $secondary-color: #ff6f39;
 $accent-color: #0aff90;
